--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
-
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VL - Personal Profile</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VLCrave Express</title>
+  <link rel="icon" type="image/png" href="./img/icon.png">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link href="css/style.css" rel="stylesheet" />
 </head>
 <body class="popup-active">
-  <!-- Popup Selamat Datang -->
-  <div id="popup-overlay"></div>
-  <div id="popup-greeting">
-    <img 
-      src="https://marketplace.canva.com/EAGKohOxSqc/1/0/1600w/canva-ilustrasi-ucapan-selamat-datang-siswa-baru-instagram-post-Su3Enh0LQb8.jpg" 
-      alt="Selamat Datang" 
-      style="max-width: 100%; width: 340px; height: auto; border-radius: 12px; margin-bottom: 0.8rem;"
-    />
-    <button id="close-popup">Masuk</button>
-  </div>
+<div id="popup-overlay"></div>
+<div id="popup-greeting">
+  <img id="popup-img" src="" alt="Status Layanan" />
+  <div id="popup-text"></div>
+  <button id="close-popup">Tutup</button>
+</div>
 
-  <!-- Header -->
-  <header class="produk-header">
-    <input id="search-input" type="text" placeholder="Cari produk..." oninput="filterProduk()" />
-    <select id="filter-kategori" onchange="filterByKategori()">
-      <option value="all">Semua</option>
-      <option value="open">Toko Buka</option>
-      <option value="makanan">Makanan</option>
-      <option value="minuman">Minuman</option>
-    </select>
-  </header>
+  <header class="produk-header" style="display: flex; align-items: center; justify-content: space-between; gap: 10px; padding: 10px 12px;">
+  <!-- Kolom Pencarian Lebih Lebar -->
+  <input
+    id="search-input"
+    type="text"
+    placeholder="Cari produk atau toko..."
+    oninput="filterProduk()"
+    style="flex: 1 1 auto; min-width: 0; padding: 10px 14px; font-size: 14px; border-radius: 8px; border: 1px solid #ccc;"
+  />
 
-  <!-- Kontainer Konten Utama -->
+  <!-- Tombol Cart -->
+  <a onclick="loadContent('checkout')" style="position: relative; display: inline-flex; align-items: center; justify-content: center; width: 42px; height: 42px; background: #eee; border-radius: 50%;">
+    <i class="fas fa-shopping-cart footer-cart-icon" style="font-size: 18px; color: #333;"></i>
+    <span class="cart-badge">0</span>
+  </a>
+</header>
+  <!-- Konten Utama -->
   <div id="page-container"></div>
 
-  <!-- Form Tambah Alamat (Hidden by Default) -->
+  <!-- Form Tambah Alamat -->
   <div id="form-alamat" style="display: none; padding: 1rem;">
     <form id="alamat-form">
       <input type="text" id="nama" placeholder="Nama Lengkap" required />
@@ -51,21 +50,12 @@
   <!-- Footer Navigasi -->
   <footer class="footer-bottom-nav">
     <a onclick="loadContent('productlist')"><i class="fas fa-home"></i> Beranda</a>
-    <a onclick="loadContent('checkout')" style="position: relative;">
-      <i class="fas fa-shopping-cart"></i>
-      Keranjang
-      <span class="cart-badge">0</span>
-    </a>
+    <a onclick="loadContent('riwayat')"><i class="fas fa-clock"></i> Riwayat</a>
     <a onclick="loadContent('alamat')"><i class="fas fa-map-marker-alt"></i> Alamat Saya</a>
   </footer>
 
-  <!-- Tambahan untuk elemen total harga checkout -->
+  <!-- Hidden Total Checkout -->
   <div style="display:none;"><span id="checkout-total">Rp0</span></div>
-
-
-
-
-
 
   <!-- Script -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
