--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
   <!-- Script -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/script_global.js"></script
 </body>
 </html>
